--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My website</title>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+    <style>body { font-size: 1.3em; }</style>
+    <title>Name Calculator</title>
   </head>
-  <body>
-    <h1>Hi !</h1>
+  <body ng-app="NameCalculator">
+    <h1>Name Calculator</h1>
+    <div ng-controller="NameCalculatorController">
+      <div>
+        Your name:
+        <input type="text"
+          ng-model="name"
+          ng-keyup="displayNumeric();">
+      </div>
+      <div>Total Numeric value of person's name is: {{totalValue}}</div>
+    </div>
   </body>
 </html>
